# bundler-old

./: .gitignore  README.md  config.nims  lovebrew.nimble  lovebrew.spec  lovebrew.toml  nim.cfg  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: CI.yml  deploy.yml
lovebrew/: __init__.py  __main__.py
lovebrew/console/: console.py  ctr.py  nx.py
lovebrew/data/: __init__.py  config.py  constants.py
lovebrew/data/classes/: console.py  ctr.py  hac.py
lovebrew/data/meta/: lovebrew.toml
res/: icon.rc
source/: assets.nim  config.nim  exception.nim  lovebrew.nim  main.nim  paths.nim  prompts.nim
source/assets/: lovebrew.toml
source/classes/: console.nim  ctr.nim  hac.nim
source/config/: configfile.nim  parsecfg.nim
src/: assets.nim  assetsfile.nim  client.nim  config.nim  configure.nim  environment.nim  logger.nim  lovebrew.nim  setup.nim  strings.nim
src/assets/: lovebrew.toml
src/assets/ctr/graphics/: messagebox_single_none.t3x  messagebox_single_pressed.t3x  messagebox_two_none.t3x  (+2 more)
src/data/: assets.nim  strings.nim
src/data/resources/: ctr.romfs  hac.romfs  lovebrew.toml
src/enums/: command.nim  extension.nim  package.nim  target.nim  tool.nim
src/lovebrew/: __init__.py  __main__.py  client.py  config.py
src/lovebrew/resources/: lovebrew.toml
src/resources/: lovebrew.toml
src/types/: config.nim  console.nim  ctr.nim  hac.nim  target.nim
test/: lovebrew.toml
test/game/: main.lua
tests/: nim.cfg  test_console.nim
